kubernetes/gke/service-mesh/consul-connect/server/greeter/kubernetes.yaml
# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grpc-ssl-demo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: grpc-ssl-demo
    kubernetes.io/ingress.allow-http: "false"
    ingress.gcp.kubernetes.io/pre-shared-cert: grpc-ssl-demo
spec:
  tls:
    - hosts:
      - grpc-ssl.1.vic.dev
      secretName: grpc-ssl-demo
  rules:
  - host: grpc-ssl.1.vic.dev
    http:
      paths:
      - backend:
          serviceName: grpc-hello
          servicePort: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-hello
  annotations:
    cloud.google.com/app-protocols: '{"grpc":"HTTP2", "hc-web": "HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"grpc":"HTTP2", "hc-web": "HTTP"}'
spec:
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
  - name: hc-web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: grpc-hello
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-hello
    spec:
      containers:
      - name: python-grpc-hello
        image: gcr.io/vic-goog/python-grpc-hello:1.1
        imagePullPolicy: Always
        ports:
          - containerPort: 50051
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
